add category module and redesign expense to map with category